ocp-deployment/service-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: public-inbox-httpd
  namespace: communishift-public-inbox-poc
  labels:
    app: public-inbox
spec:
  selector:
    app: public-inbox
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: public-inbox
  namespace: communishift-public-inbox-poc
  labels:
    app: public-inbox
spec:
  host: public-inbox-communishift-public-inbox-poc.apps.fedora.cj14.p1.openshiftapps.com
  to:
    kind: Service
    name: public-inbox-httpd
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
